# objection.troll

./: README.md
resources/characters/PWAA/Phoenix Wright/: prosecutor.psd
resources/characters/PWAA/Polly/: Evil.psd  Evil_Talk.psd  Sweat.psd  Sweat_Talk.psd
resources/characters/Xeenob/: Xeenob.psd
src/processor/: .gitignore  main.py  merge.py  process.py  pyproject.toml
src/renderer/: .gitignore  lalatypes.py  main.py  pyproject.toml
src/renderer/util/pod/: __init__.py  pdict.py  plist.py  pod.py
src/renderer/video/: context.py  renderer.py  video.py
src/renderer/video/components/: __init__.py  character.py  component.py  container.py  frame.py  gif.py  line.py  scene.py  scratch.py  sequence.py  text.py  textbox.py
src/renderer/video/components/commands/: bgs.py  command.py  pause.py  textspeed.py
src/renderer/video/components/textbox/: __init__.py  textbox.py  trilogy.py
src/renderer/video/components/textboxes/: __init__.py  char.py  line.py  text.py  textbox.py  trilogy.py
src/renderer/video/components/textboxes/commands/: __init__.py  bgs.py  color.py  command.py  flash.py  pause.py  shake.py  textspeed.py
src/renderer/video/effects/: __init__.py  audio.py  effect.py  flash.py  shake.py
